# fairlearn

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  3.2.1  AUTHORS.md  CHANGES.md  CHANGES.rst  CITATION.cff  CODEOWNERS.md  CODE_OF_CONDUCT.md  COMMUNICATON.md  CONTRIBUTING.md  CONTRIBUTION_SUMMARY.md  EXECUTION_REPORT.md  FINAL_STATUS.md  INDEX.md  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  PR_TEMPLATE.md  QUICK_START_PR.md  README.md  README.rst  README_CONTRIBUTION.md  TERMINOLOGY.md  Untitled.ipynb  azure-pipelines.yml  bugdemo.txt  ci-fairlearn  ci-fairlearn.pub  codecov.yml  deps.txt  pyproject.toml  repro.py  requirements-3.5.txt  requirements-customplots.txt  requirements-dev.txt  requirements-fixed.txt  requirements-min.txt  (+6 more)
.binder/: requirements.txt
.circleci/: artifact_path  config.yml  push_doc.sh
.github/: PULL_REQUEST_TEMPLATE.md  auto-assign-reviewers-config.yml
FairLearn Use case/: Usecase - ACF.ipynb  Usecase - Reweighing.ipynb
azuredevops/: all-tests-job-template.yml  code-coverage-job-template.yml  code-coverage.yml  nightly.yml  notebook-job-template.yml  notebooks.yml  pull-request-gate-job-template.yml  pull-request-gate-steps.yml  pull-request-gate.yml
builds/: codescanning.yml
devops/: PR-Gate.yml  README.md  all-tests-job-template.yml  code-coverage-job-template.yml  code-coverage.yml  create-wheel-step-template.yml  fetch-version-from-artifacts-steps-template.yml  nightly-perf.yml  nightly-requirements-fixed.yml  nightly.yml  notebook-job-template.yml  notebook-pypi-job-template.yml  other-ml-packages.yml  perf-tests-job-template.yml  pip-freeze-to-artifact-steps-template.yml  pip-install-from-artifact-steps-template.yml  pip-install-steps-template.yml  prepare-repo-for-pip-testing-steps-template.yml  pypi-deployment-stages-template.yml  pypi-release-new.yml  pypi-release.yml  python-infra-upgrade-steps-template.yml  quick_linux_test.yml  requirements-pin-steps-template.yml  schedule-test.yml  store-pip-freeze-job-template.yml  testing-build-package.yml  unit-tests-pypi-job-template.yml  variables-template.yml
docbuild-fairlearn/: fairlearn.rst
docbuild-fairlearn-core/: index.rst
docs/: README.md  community.rst  conf.py  contents.rst  contribution_guide.rst  fairlearn.exceptions.rst  fairlearn.metrics.rst  fairlearn.postprocessing.rst  fairlearn.reductions.rst  fairlearn.rst  fairlearn.widget.rst  faq.rst  index.html  index.rst  jupyter-lite.json  jupyter_lite_config.json  quickstart.rst  quickstart_plot.py  references.bib  refs.bib
examples/: README.rst  credit_loan_decisions.py  new_metrics.py  original.py  plot_adult_dataset.py  plot_adversarial_basics.py  plot_adversarial_fine_tuning.py  plot_adversarial_mitigation.py  plot_binary_classification_COMPAS.py  plot_correlationremover_before_after.py  plot_credit_loan_decisions.py  plot_encrypted_metrics.py  plot_grid_search_census.py  plot_intersectional_bias.py  plot_make_derived_metric.py  plot_metricframe_beyond_binary_classification.py  plot_metrics_with_error.py  plot_mitigation_pipeline.py  plot_new_metrics.py  plot_plotting_metrics_with_error.py  plot_pp_study.py  plot_quickstart.py  plot_quickstart_counts.py  plot_quickstart_selection_rate.py  plot_ranking.py  plot_relabeling.py  plot_relaxed_equalized_odds.py  plot_roc_auc.py  plot_synthetic.py  plot_tensorflow.py
experiments/: GPA.py  data.csv  exp_grad.txt  run_exp_grad_BGL.py  run_exp_grad_DP.py  run_grid_search_BGL.py
fairlearn/: __init__.py  _input_validation.py  classred.py  constants.py  exceptions.py  grid_search.py  input_validation.py  moments.py  show_versions.py
notebooks/: .gitignore  Additive Counterfactual Fairness for Loan Approvals.ipynb  Binary Classification on COMPAS dataset.ipynb  Binary Classification with the UCI Credit Card Payment Default Dataset.ipynb  Binary Classification with the UCI Credit-card Default Dataset.ipynb  Census Data Fairness with Grid Search.ipynb  Census Data Fairness.ipynb  Comparing_ROC_Curves.ipynb  Comparing_ROC_Curves_work.ipynb  Credit Loan Decisions.ipynb  Credit Loan Example.ipynb  Exp Gradient for DP(adultl).ipynb  Exp Gradient for DP(law school).ipynb  Exp Gradient for DP.ipynb  Grid Search for Binary Classification - Admissions.ipynb  Grid Search for Binary Classification.ipynb  Grid Search on Law School Dataset.ipynb  Grid Search with Census Data.ipynb  Grid Search with the COMPAS Dataset.ipynb  Group Metrics.ipynb  Metrics with Multiple Features.ipynb  Mitigating Disparities by Gender GPA Data.ipynb  Mitigating Disparities in Ranking from Binary Data.ipynb  Mitigating Gender Disparities in GPA Data.ipynb  Mitigating Unfairness in the Law School Dataset.ipynb  Mitigating-Disparities-in-Ranking-from-Binary-Data.ipynb  OptThreshold Post-Processing for Binary Classification.ipynb  ROC Curve based Post-Processing for Binary Classification.ipynb  ReadMe.md  Relabeling for Binary Classification.ipynb  Test-DP-ratio-on-adult-dataset.ipynb  Threshold Optimization Post-Processing for Binary Classification.ipynb  Threshold Optimization Postprocessing for Binary Classification on COMPAS dataset.ipynb  Threshold Optimization Postprocessing for Binary Classification.ipynb  Usecase - ACF- Fairlearn metrics.ipynb  Usecase - ACF- Latest.ipynb  Usecase - ACF.ipynb  fair_func.py  functions.py  tfco-fairlearn-experiment.ipynb  (+1 more)
othermlpackages/: package_test_common.py
scripts/: _utils.py  build-docs.ps1  build-test-wheels.ps1  build-wheels.ps1  build-widget.ps1  build_docs.py  build_documentation.py  build_wheels.py  build_widget.py  fairlearn_version.py  generate_maintainers_table.py  install_fairlearn_from_wheel.py  install_requirements.py  prepare-git-pypi-test.ps1  process_readme.py  requirements_override.py  requirements_pin.py  requirementscheck.py  set-variable-from-file.ps1  widget-build-validation.ps1
test/: TEST.xml  _sklearn_compat.py  conftest.py  pytest.ini  setup.cfg  simple_learners.py  test_all_metrics.py  test_expgrad_smoke.py  test_fairlearn_smoke.py  test_grid_search.py  test_post_processing.py  test_true_positive_rate.py  utils.py
(+868 files in other folders)
