[metadata]
name = fairlearn
version = attr: fairlearn.__version__
author = Miroslav Dudik
author_email = mdudik@gmail.com
description = Algorithms for fair classification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fairlearn/fairlearn
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.5
install_requires =
    matplotlib>=3.0.3
    numpy>=1.17.2
    pandas>=0.25.1
    scikit-learn>=0.21.3
    scipy>=1.3.1
include_package_data = True
zip_safe = False

[options.data_files]
share/jupyter/nbextensions/fairlearn-widget =
    fairlearn/widget/static/extension.js
    fairlearn/widget/static/extension.js.map
    fairlearn/widget/static/index.js
    fairlearn/widget/static/index.js.map
etc/jupyter/nbconfig/notebook.d = 
    jupyter-config/nbconfig/notebook.d/fairlearn-widget.json
share/jupyter/lab/extensions =
    fairlearn/widget/js/*
    fairlearn_widget/labextension/fairlearn-widget-0.1.0.tgz



[flake8]
max-line-length = 99